[package]
name = "rust-talk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.57.1"
aws-sdk-dynamodb = "0.35.0"
lambda_http = "0.8.3"
lambda_runtime = "0.8.3"
serde = "1.0.192"
serde_dynamo = { version = "4", features = ["aws-sdk-dynamodb+0_35"] }
serde_json = "1.0.108"
tokio = { version = "1", features = ["macros"] }

[[bin]]
name = "rust_talk_rust"
path = "src/rust_talk_rust.rs"

[[bin]]
name = "rust_dynamodb"
path = "src/rust_dynamodb.rs"

[[bin]]
name = "rust_sum"
path = "src/rust_sum.rs"
